css/shared.css
@import url("https://fonts.googleapis.com/css?family=EB+Garamond:400,600,700,800");
@import url("https://fonts.googleapis.com/css?family=Montserrat");

/* Colors:

Navy: #132a41
Coral: #ee6978

*/

html {
	scroll-behavior: smooth;
	height: 100%;
	max-width: 100%;
	overflow-x: hidden;
}

html.mod-touch * {
	background-attachment: scroll !important;
}

img {
	outline: none;
	user-select: none !important;
	-moz-user-select: none;
	-webkit-user-drag: none;
	-webkit-user-select: none;
	-ms-user-select: none;
}

body {
	margin: 0px;
	min-height: 100%;
	height: 100%;
	/*-moz-osx-font-smoothing: grayscale;*/
	/*-webkit-font-smoothing: antialiased;*/
}

a {
	text-decoration: none;
	word-break: break-all;
}

a:hover {
	text-decoration: none;
}

.w-container, .w-row {
	-webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
}

.navy-body {
	background-color: #132a41;
	color: #fff;
	font-family: "Lato", sans-serif;
	height: auto;
	min-height: 100%;
	letter-spacing: 0.4px;
	font-weight: 300;
}

.absolute {
	position: absolute;
}

.left {
	text-align: left !important;
}

a {
	text-decoration: none !important;
}
.coral {
	color: #ee6978;
}

.coral.bold {
	font-weight: 600;
}

.coral:hover {
	color: #ee6978;
}

.logo-medium {
	width: 500px;
	margin-left: 20px;
}

.logo-font {
	font-family: "Montserrat", sans-serif;
}

.logo-main {
	width: auto;
	height: 30vh;
	transition: 300ms ease;
}

.logo-main.datathon {
	width: auto;
	height: 20vh;
}

.logo-sub {
	width: auto;
	height: 7vh;
	transition: 300ms ease;
}

.event-text {
	padding: 0;
	max-width: initial;
}

.workshop-img {
	height: 170px;
	margin-bottom: 20px;
	width: auto;
	outline: none;
	box-shadow: 0 2px 4px 0 #0000001e, 0 1px 3px 0 #0000002f;
}

.workshop-img:hover {
	box-shadow: 0 1px 2px 0 #0000001e, 0 3px 3px 0 #0000002f;
	transition: 400ms ease;
}

.application-btn {
	float: none;
	padding: 15px;
	margin: 50px auto 25px;
	border: 1px solid lightgray;
	border-radius: 4px;
	background-color: transparent;
	width: 225px;
	height: 50px;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 14px;
	transition: 400ms ease;
}

.application-btn:hover {
	border: 1px solid #ee6978;
	transition: 400ms ease;
}

.standard-btn {
	text-align: center;
	display: inline-block;
	padding: 12px 18px;
	color: #132a41;
	border-radius: 14px;
	background-color: transparent;
	font-size: 14px;
	transition: 400ms ease;
	width: auto;
	height: 46px;
	outline: none;
	cursor: pointer;
	box-shadow: 0 2px 4px 0 #0000001e, 0 1px 3px 0 #0000002f;
	margin: auto 20px;
}

.standard-btn:hover {
	box-shadow: 0 1px 2px 0 #0000001e, 0 3px 3px 0 #0000002f;
	transition: 400ms ease;
}

.workshop-disabled {
	cursor: auto;
	color: #8e8e8e;
	background: #f1f1f1;
}

#gear {
    margin-top: 20px;
	animation-name: ckw;
	animation-duration: 5s;
	animation-iteration-count: infinite;
	transform-origin: 50% 50%;
	display: inline-block;
	animation-timing-function: linear;
}
#gear2 {
	position: relative;
	top: 35px;
	right: 10px;
	animation-name: ccw;
	animation-duration: 5s;
	animation-iteration-count: infinite;
	transform-origin: 50% 50%;
	display: inline-block;
	animation-timing-function: linear;
}

@keyframes ckw {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}
@keyframes ccw {
	0% {
		transform: rotate(360deg);
	}
	100% {
		transform: rotate(0deg);
	}
}

/* -------- Tooltip Styling -------- */

.tippy-tooltip.bds-theme {
	background-color: #132a41;
	padding: 10px 10px;
	text-align: center;
	border-radius: 10px;
	box-shadow: 0 2px 4px 0 rgba(99, 100, 100, 0.397);
}

.tippy-tooltip.bds-theme[data-animatefill] {
	background-color: transparent;
}

.tippy-tooltip.bds-theme .tippy-backdrop {
	background-color: #132a41;
}

/*.tippy-tooltip.bds-theme .tippy-roundarrow {*/
/*	fill: #fff;*/
/*}*/

@media (max-width: 700px) {
	.logo-main {
		height: 25vh;
	}
	.logo-main.datathon {
		height: 16vh;
	}
	.logo-sub {
		height: 6vh;
	}
	.logo-main.welcomeBanner {
		height: 20vh;
	}
}

@media (max-width: 480px) {
	.logo-main {
		height: 18vh;
	}
	.logo-main.datathon {
		height: 10vh;
	}
	.logo-sub {
		height: 4vh;
	}
	.logo-main.welcomeBanner {
		height: 13vh;
	}
}

@media (max-width: 300px) {
	.logo-main {
		height: 12vh;
	}
	.logo-main.datathon {
		height: 10vh;
	}
	.logo-sub {
		height: 2vh;
	}
}

.form-button {
	font-size: 15pt !important;
}

.form-button:hover {
	border-color: #f27b89;
	color: #ee6978;
}

.small-bear-logo {
	display: block;
	margin-right: auto;
	margin-top: 20px;
	margin-left: auto;
}

.center-container {
	text-align: center;
}

.divider-small {
	width: 50px;
	height: auto;
	padding-top: 8px;
	padding-bottom: 18px;
}

.divider-small.indent {
	width: 30px;
	margin-left: 3%;
	padding-top: 0;
}

.workshop-picture {
	height: auto;
	width: 280px;
	padding-top: 35px;
	padding-bottom: 15px;
}

.navy-text {
	display: inline-block;
	color: #132a41;
}

.navy-text-block {
	display: block;
	color: #132a41;
}

.navy-text.left {
	text-align: left !important;
	margin-bottom: 20px;
}


.navy-text.left.list {
	font-size: 12pt;
}

.navy-text.card {
	padding-left: 15px;
	padding-right: 15px;
}

.navy-text.card.track {
    text-align: left;
}

.sub-heading-navy {
	margin-left: 3%;
	display: inline-block;
	color: #132a41;
	font-size: 18px;
	text-align: left !important;
}

.sub-heading-navy.large {
	font-size: 28px;
	font-weight: 600;
	text-align: center;
}

.sub-heading-navy.datathon {
	margin-top: 40px;
}

li {
	margin-bottom: 15px;
}

.workshop {
	padding-left: 40px;
	padding-right: 40px;
}

.event {
	margin-top: 10px;
	text-align: left;
}

.event h4 {
	font-weight: bold;
}

.event-name {
	display: flex;
	justify-content: space-between;
}

.event-day {
	padding: 0 50px;
}

.navy {
	background-color: #132a41;
}

.white {
	color: #fff;
}

.logo-hover {
	background-image: url("../images/logos/logosmall.png");
	height: 40px;
	width: 40px;
	opacity: 0.41;
	padding-bottom: 10px;
}

.card-outline {
	padding: 15px;
	height: 150px;
	width: auto;
	text-align: center;
}

.team-image {
	padding: 15px;
	height: 165px;
	width: 165px;
	text-align: center;
}

.team-image-large {
	padding: 15px;
	height: 180px;
	width: 180px;
	text-align: center;
}

.card-datathon {
	padding: 15px;
	height: 300px;
	width: auto;
	text-align: center;
}

.sponsor {
	padding: 1rem;
}

.sponsor.large {
	height: auto;
	width: 300px;
	opacity: 1;
	transition: 300ms;
}

.sponsor.small {
	height: auto;
	width: 150px;
	opacity: 1;
	transition: 300ms;
}

.sponsor:hover {
	opacity: 1;
	transition: 300ms;
}

a:active {
	color: #ee6978;
	transition: 300ms;
}

.learn-button {
	margin-top: 6px;
	margin-right: 15px;
	margin-left: 0px;
	padding: 2px 8px 1px;
	font-size: 11px;
	letter-spacing: 2px;
	border-radius: 4px;
	text-decoration: none;

	border: 1px solid #0f2031;
	background-color: transparent;
	-webkit-transition: color 400ms ease, border-color 400ms ease;
	transition: color 400ms ease, border-color 400ms ease;
	color: #132a41;
	font-weight: 600;
}

.learn-button:hover {
	border-color: #f27b89;
	color: #ee6978;
}

input[type="checkbox"] {
	display: none;
}

.collapsible-content .content-inner {
	background: #e9e9e98f;
	padding: 0.5rem 1rem;
}

.collapsible-content {
	max-height: 0px;
	overflow: hidden;

	transition: max-height 0.7s ease-in-out;
}
.toggle:checked + .label-toggle + .collapsible-content {
	max-height: 350px;
}

.toggle:checked + .label-toggle::before {
	transform: rotate(90deg) translateX(-3px);
}

.service-item h1 {
	text-align: center;

	text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);

	color: white;
	font-family: "Open Sans", sans-serif;
}

.service-item .section-heading {
	color: #132a41;
	font-weight: 600;
	font-size: 16px;
}

.dropdown {
	position: relative;
    display: inline-block;
    z-index: 1000;
}

.dropdown-content {
	display: none;
	position: absolute;
    right: 0;
    text-align: center;
	/*background-color: #132a41;*/
    min-width: 120px;
	z-index: 1002;
}

.dropdown-content > a {
	-webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.096), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
	-moz-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.096), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.096), 0 6px 10px 0 rgba(0, 0, 0, 0.19);

	width: 111px;
	background: #132a41 !important;

	color: #FFFFFF;
	padding: 12px 16px;
	text-decoration: none;
	display: block;
	text-align: center;
}

.dropdown-content > a:not(:first-child) {
	margin-top: 8px !important;
}

.dropdown:hover .dropdown-content {
	display: block;
}

.justify {
	text-align: justify;
}

.bold {
	font-weight: 600;
}

.event-container {
	display: flex;
	margin-bottom: 15px;
}

.event-container > img {
	height: 170px;
	margin: auto;
	width: auto;
}

.footer-container {
	display: flex;
	justify-content: center;
	align-items: center;
	min-height: 100px;
}

.w-row.workshop {
	margin-bottom: 40px;
}

